--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     }
   ],
   "require": {
-    "php": "^8.1"
+    "php": "^8.1",
+    "itinerisltd/itineris-wp-coding-standards": "^1.0"
   },
   "autoload": {
     "psr-4": {
@@ -36,8 +37,7 @@
     "style:fix": "phpcbf"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-master",
-    "itinerisltd/itineris-wp-coding-standards": "dev-2023-02-01"
+    "roave/security-advisories": "dev-master"
   },
   "extra": {
     "branch-alias": {
