--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     }
   ],
   "require": {
-    "php": "^8.1",
-    "itinerisltd/itineris-wp-coding-standards": "^1.0"
+    "php": "^8.1"
   },
   "autoload": {
     "psr-4": {
@@ -37,7 +36,8 @@
     "style:fix": "phpcbf"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-master"
+    "roave/security-advisories": "dev-master",
+    "itinerisltd/itineris-wp-coding-standards": "^1.0"
   },
   "extra": {
     "branch-alias": {
