--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
+# yamllint disable-line rule:document-start
 name: CI
 
+# yamllint disable-line rule:truthy
 on: [push]
 
 jobs:
@@ -9,29 +11,38 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     strategy:
       matrix:
-        php: ['8.1']
+        php: ['8.1', '8.2']
 
     steps:
       - name: Checkout the project
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup the PHP ${{ matrix.php }} environment on ${{ runner.os }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           coverage: xdebug
+        env:
+          COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Restore the Composer cache directory
         id: composer-cache
         run: echo "dir=$(composer config cache-files-dir)" >> "${GITHUB_OUTPUT}"
 
-      - uses: actions/cache@v3
+      - name: Cache dependencies
+        uses: actions/cache@v4
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
+          # yamllint disable-line rule:line-length
           key: ${{ runner.os }}-${{ matrix.php }}-composer-${{ hashFiles('**/composer.json') }}
           restore-keys: ${{ runner.os }}-${{ matrix.php }}-composer-
 
+      - name: Setup Composer Private Packagist authentication
+        # yamllint disable-line rule:line-length
+        run: composer config --global --auth http-basic.repo.packagist.com itineris ${{ secrets.PRIVATE_PACKAGIST_TOKEN }}
+
       - name: Install Composer dependencies
+        # yamllint disable-line rule:line-length
         run: composer install --no-progress --prefer-dist --optimize-autoloader --no-suggest
 
       - name: Execute the PHP lint script
